2011-03-07  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* configure.ac: Bump to rc3.1.

	* config/local/configure.cfg,
	* config/local/driver.cfg,
	* config/stable/configure.cfg,
	* config/stable/driver.cfg: Update the configuration files.

2011-03-07  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* driver/pocc/include/pocc/options.h,
	* driver/pocc/options.c,
	* driver/pocc/driver-cloog.c,
	* driver/pocc/driver-pluto.c,
	* driver/src/options.h,
	* driver/src/options.c: Add support for option --pluto-bounds,
	which bounds the transformation coefficients in Pluto.

2011-02-08  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* README,
	* doc/pocc.texi: Update documentation to pocc-1.0-rc3.

	* config/stable/configure.cfg,
	* config/stable/driver.cfg: Bump to pluto-0.5.2-pace.

	* driver/src/Makefile.am: Fix a potential link problem with pocc
	libraries.

2011-02-04  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* config/stable/configure.cfg,
	* config/stable/driver.cfg,
	* config/local/configure.cfg,
	* config/local/driver.cfg: Update the configuration files to
	support Candl/ISL and the latest version revision of Candl, CLooG
	and ISL.

2011-02-04  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* configure.ac: Bump to pocc-1.0-rc3.

2011-02-04  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* tests/tests/gemver/gemver.plutotileparunrollprev.c,
	* tests/tests/gemver/gemver.plutotileparunroll.c,
	* tests/tests/gemver/gemver.plutotile.c,
	* tests/tests/gemver/gemver.plutotilepar.c,
	* tests/tests/gemver/gemver.passthru.c,
	* tests/tests/dgemm/dgemm.passthru.c,
	* tests/tests/dgemm/dgemm.plutotileparunrollprev.c,
	* tests/tests/dgemm/dgemm.plutotileparunroll.c,
	* tests/tests/dgemm/dgemm.plutotile.c,
	* tests/tests/dgemm/dgemm.plutotilepar.c: Update the test suite to
	reflect the new CLooG output.

2011-02-04  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* config/stable/configure.cfg,